common/tests/badSyntax/unclosedString.output
unclosedString.tyco:6.36: 
Unclosed string at end of file
unclosedString.tyco:6.36: 
Syntax error at end of file
2 errors
