common/tests/badSyntax/unclosedString.tyco
-- Syntax Error

-- Unclosed string at end of file

new x
x ! lala["Gee, forgot to close this